--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,12 @@ __pycache__
 .venv
 *.egg-info
 
-.idea/workspace.xml
-*.xml
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+**/.idea/*
 
 # CDK asset staging directory
 .cdk.staging
